--- a/Main-Center.html
+++ b/Main-Center.html
@@ -9,66 +9,88 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
+/* ======================= Reset y Base ======================= */
 *{
     margin:0;
     padding:0;
     box-sizing:border-box;
 }
 
-  body {
+body {
     background: #000000;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 40px 0;
-    overflow: hidden;
-    height: 100vh;
-    margin: 0;
-  }
+    overflow-x: hidden;
+    min-height: 100vh;
+}
 
-  .star {
+/* ======================= Estrellas Animadas ======================= */
+.star {
     position: absolute;
     background: white;
     border-radius: 50%;
     opacity: 0.8;
     animation: twinkle 2s infinite alternate;
-  }
+}
 
-  @keyframes twinkle {
+@keyframes twinkle {
     from { opacity: 0.3; transform: scale(0.8); }
     to { opacity: 1; transform: scale(1.2); }
-  }
+}
 
-/* Titulo superior */
+/* ======================= Top Title ======================= */
 .top-title{
     text-align:center;
     margin-bottom:25px;
 }
+
 .top-title h2{
-    font-size:18px;
+    font-size:28px;
     letter-spacing:2px;
 }
+
 .top-title span{
-    font-size:12px;
-    letter-spacing:3px;
+    font-size:14px;
+    letter-spacing:2px;
 }
 
-/* Card principal */
+.pastel-text {
+    font-weight: bold;
+    font-size: 28px;
+    background: linear-gradient(90deg, #f7b2d6 50%, #a1c4fd 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    animation: pastelWave 6s linear infinite;
+}
+
+@keyframes pastelWave {
+    0% { background-position: 0% 0%; }
+    50% { background-position: 100% 0%; }
+    100% { background-position: 0% 0%; }
+}
+
+/* ======================= Contenedor Principal ======================= */
 .container{
-    width:1000px;
+    width: 90%;
+    max-width: 1000px;
     background:#f5f2ee;
     border-radius:5px;
     box-shadow:0 8px 20px rgba(0,0,0,0.2);
     padding:30px 50px;
     position:relative;
     overflow:hidden;
+    margin-bottom: 40px;
 }
 
-/* Navbar */
+/* ======================= Navbar ======================= */
 nav{
     display:flex;
     gap:30px;
+    flex-wrap: wrap;
     margin-bottom:40px;
 }
 
@@ -85,16 +107,19 @@ nav a.active{
     padding:6px 12px;
 }
 
-/* Contenido */
+/* ======================= Contenido ======================= */
 .content{
     display:flex;
     align-items:center;
     justify-content:space-between;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 /* Texto izquierdo */
 .text{
     max-width:480px;
+    flex: 1 1 300px;
 }
 
 .text h1{
@@ -128,27 +153,17 @@ nav a.active{
     margin-bottom:20px;
 }
 
-.social{
-    margin-top:20px;
-}
-
-.social i{
-    margin-right:10px;
-    font-size:14px;
-    color:#6b3e2e;
-    cursor:pointer;
-}
-
 /* Imagen derecha */
 .image{
     position:relative;
 }
 
 .image img{
-    width:320px;
-    height:420px;
+    width:100%;
+    max-width:320px;
+    height:auto;
     object-fit:cover;
-    border-radius:200px 200px 0 0;
+    border-radius:50%;
 }
 
 /* Decoraciones */
@@ -169,6 +184,341 @@ nav a.active{
     left:380px;
     width:80px;
 }
+
+/* ======================= Botones y Social ======================= */
+.btn-wrapper{
+    position: relative;
+    display: inline-block;
+}
+
+.btn-img{
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(100%);
+    width: 40px;
+    transition: transform 0.3s ease;
+}
+
+.btn-img:hover{
+    transform: translateX(-50%) translateY(-5px) scale(1.1) rotate(5deg);
+}
+
+.upload-btn {
+    display: inline-block;
+    padding: 14px 28px;
+    background: linear-gradient(135deg, #f7b2d6, #a1c4fd);
+    color: #fff;
+    font-weight: 600;
+    font-size: 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.upload-btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+
+#cardsContainer {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.card {
+    background: #fff8f0;
+    padding: 20px;
+    border-radius: 20px;
+    width: 300px;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+}
+
+.img-container {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto 12px auto;
+    border: 3px solid #d4af37;
+    position: relative;
+    cursor: grab;
+    transition: box-shadow 0.4s ease;
+}
+
+.img-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    user-select: none;
+    pointer-events: none;
+    transition: transform 0.4s ease;
+}
+
+.card input[type="text"] {
+    width: 90%;
+    padding: 8px 10px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    font-size: 14px;
+    transition: border 0.3s ease;
+}
+
+.card input[type="text"]:focus {
+    border-color: #a1c4fd;
+    outline: none;
+}
+
+.phrase-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 10px;
+}
+
+.phrase {
+    font-size: 14px;
+    color: #5c3a2e;
+    text-align: center;
+}
+
+.edit-icon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    opacity: 0.7;
+    transition: all 0.3s ease;
+}
+
+.edit-icon:hover {
+    opacity: 1;
+    transform: scale(1.2);
+}
+
+.save-btn {
+    padding: 8px 18px;
+    border: none;
+    border-radius: 25px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    background: linear-gradient(135deg, #28a745, #20c997);
+    color: white;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+    transition: all 0.3s ease;
+    margin-top: 8px;
+    display: none;
+}
+
+.save-btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+
+.saved-animation img {
+    animation: pulseGlow 0.8s ease forwards;
+}
+
+.saved-animation .phrase {
+    animation: slideFade 0.8s ease forwards;
+}
+
+@keyframes pulseGlow {
+    0% { transform: scale(0.95); box-shadow: 0 0 0px #d4af37; filter: brightness(1); }
+    50% { transform: scale(1.1); box-shadow: 0 0 20px #ffd700; filter: brightness(1.3); }
+    100% { transform: scale(1); box-shadow: 0 0 8px #d4af37; filter: brightness(1); }
+}
+
+@keyframes slideFade {
+    0% { opacity: 0; transform: translateY(20px); }
+    100% { opacity: 1; transform: translateY(0); }
+}
+
+/* ======================= Modal ======================= */
+.modal{
+    display:none;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(6px);
+    justify-content:center;
+    align-items:center;
+    z-index:1000;
+}
+
+.modal-content{
+    background: #fff8f0;
+    width: 650px;
+    max-width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+    padding: 40px;
+    border-radius: 25px;
+    box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+    position: relative;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: all 0.5s ease;
+    scroll-behavior: smooth;
+}
+
+.modal-content::-webkit-scrollbar{
+    width: 8px;
+}
+
+.modal-content::-webkit-scrollbar-track{
+    background:transparent;
+}
+
+.modal-content::-webkit-scrollbar-thumb{
+    background: linear-gradient(180deg, #d4af37, #c58b6d);
+    border-radius: 20px;
+}
+
+.modal-content::-webkit-scrollbar-thumb:hover{
+    background: linear-gradient(180deg, #ffd700, #a66a4f);
+}
+
+.close{
+    position:absolute;
+    top:15px;
+    right:20px;
+    font-size:28px;
+    font-weight:bold;
+    color:#c58b6d;
+    cursor:pointer;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.close:hover{
+    transform: rotate(90deg) scale(1.2);
+    color:#ffd700;
+}
+
+.gold-wave{
+    background: linear-gradient(90deg, #d4af37, #ffd700, #d4af37);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    animation: wave 5s linear infinite;
+}
+
+@keyframes wave{
+    0%{ background-position: -200% 0; }
+    100%{ background-position: 200% 0; }
+}
+
+.modal-body p{
+    line-height:1.7;
+    font-size: 15px;
+    color:#5c3a2e;
+    margin-top:15px;
+}
+
+.modal-body h4{
+    margin-top:20px;
+    text-align:right;
+    font-size:16px;
+}
+
+/* ======================= Preview de Texto ======================= */
+.preview{
+    height: 120px;
+    overflow: hidden;
+    white-space: pre-line;
+    font-size: 14px;
+    line-height: 1.6;
+    color:#444;
+    background: linear-gradient(
+        120deg,
+        #444 0%,
+        #444 45%,
+        #d4af37 50%,
+        #444 55%,
+        #444 100%
+    );
+    background-size: 200% 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: goldWave 5s linear infinite;
+    position: relative;
+}
+
+.preview::after{
+    content:"";
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:40px;
+    background: linear-gradient(to bottom, transparent, #f5f2ee);
+}
+
+@keyframes goldWave{
+    0%{ background-position: -200% 0; }
+    100%{ background-position: 200% 0; }
+}
+
+/* ======================= Media Queries para móviles ======================= */
+@media screen and (max-width: 700px){
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .image img {
+        width: 80%;
+        height:auto;
+        margin-bottom:20px;
+    }
+
+    nav {
+        gap: 15px;
+    }
+
+    .top-title h2 {
+        font-size: 22px;
+    }
+
+    .top-title span {
+        font-size: 14px;
+    }
+
+    .btn {
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+
+    .preview {
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .text h1 { font-size: 28px; }
+    .text h3 { font-size: 18px; }
+    .text p { font-size: 13px; }
+}
+
 </style>
 </head>
 <body>
