Main-Center.html

--- a/Main-Center.html
+++ b/Main-Center.html
@@ -7,6 +7,7 @@
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel='shortcut icon' type='image/x-icon' href='https://i.pinimg.com/736x/15/a3/a0/15a3a03201a1169850ed2ab25bf8a8f8.jpg'>
 
 <style>
 /* ======================= Reset y Base ======================= */
@@ -1212,3 +1213,4 @@ window.onclick = function(e){
 
 </body>
 </html>
+
