--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Yamilet 💜</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;500&display=swap" rel="stylesheet">
+  <link rel='shortcut icon' type='image/x-icon' href='https://i.pinimg.com/736x/15/a3/a0/15a3a03201a1169850ed2ab25bf8a8f8.jpg'>
 
 <style>
 *{
@@ -182,4 +183,5 @@ setInterval(()=>{
 </script>
 
 </body>
+
 </html>  
